--- a/GUIDE-HTML/views/index.html
+++ b/GUIDE-HTML/views/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="keyword" content="" />
-    <meta name="description" content="button" />
-    <meta name="author" content="joahreum" />
+    <meta name="description" content="퍼블가이드" />
+    <meta name="author" content="이솔" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"/>
     <!-- 가이드CSS -->
     <link rel="stylesheet" type="text/css" href="../assets/css/guide.css" />
