웹접근성 컬러

--- a/GUIDE-HTML/views/guide/ACCORDION.html
+++ b/GUIDE-HTML/views/guide/ACCORDION.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- 가이드CSS -->
-    <link rel="stylesheet" type="text/css" href="../../assets/css/guide.css" />
-    <link rel="stylesheet" type="text/css" href="../../assets/css/common.css" />
+    <link rel="stylesheet" type="text/css" href="../../assets/css/layout.css" />
     <link rel="stylesheet" type="text/css" href="../../assets/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="../../assets/css/guide.css" />
 
     <!-- 공통JS -->
     <script type="text/javascript" src="../../assets/js/jquery-1.9.1.min.js"></script>
