--- a/GUIDE-HTML/assets/css/reset.css
+++ b/GUIDE-HTML/assets/css/reset.css
@@ -1,4 +1,24 @@
 @charset "UTF-8";
+* { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; -webkit-text-size-adjust: none; word-break:keep-all;  word-wrap:break-word; transition: all .2s;}
+html { font-size:18px; overflow-y:auto; }/*  기본 폰트 사이즈 18px */
+body { font-size:1rem;; font-weight:400; line-height: normal; font-family:'Noto Sans KR', 'Pretendard', 'Spoqa Han Sans Neo', "Apple SD Gothic Neo", sans-serif; color: var(--default-color); }
+body, h1, h2, h3, h4, h5, h6, dl, dt, dd, ul, li, ol, li, table, caption, th, td, form, fieldset, legend, address, div, p, span, a { margin:0; padding:0; }
+ul,ol,li,dl,dt,dd { list-style: none; }
+form, fieldset, legend, input, button, textarea, label { color: var(--default-color); }
+div, img, form, fieldset, button, blockquote, p, hr, select, input { border:0; padding:0; margin:0; font-size:1rem; }
+img, table { width:100%; }
+legend, caption { position:absolute; width:1px; height:1px; padding:0; margin:-1px; overflow: hidden;  border:0; clip:rect(0, 0, 0, 0); white-space: nowrap; } /*21.1.28 웹접근성*/
+input, textarea, select, address { font-family: 'Pretendard', 'Spoqa Han Sans Neo', "Apple SD Gothic Neo", sans-serif; }
+input, button, select, textarea { font-family: inherit; }
+input, textarea, select { display:inline-block; vertical-align: middle; color:var(--default-color); }
+
+img { line-height:0; font-size:0; vertical-align:top; }
+table{ border-spacing:0; border-collapse: collapse; }
+address, em { font-style: normal; }
+button { background-color:var(--white); text-align:center; cursor:pointer;}
+a { display:block; color:var(--default-color);  }
+a, a:hover, a:focus, a:active { text-decoration: none; cursor: pointer; }
+
 /* ===================== 예약어 css =======================================================*/
 .dp-none { display:none; }
 
